--- a/src/index.ejs
+++ b/src/index.ejs
@@ -80,12 +80,12 @@
           </div>
 
           <div class="grid-container">
-            <div class="grid">
-              <div>item1</div> 
-              <div>item2</div> 
-              <div>item3</div> 
-              <div>item4</div> 
-              <div>item5</div> 
+            <div class="grid bold">
+              <div>ASKD</div> 
+              <div>FNSA</div> 
+              <div>FJDS</div> 
+              <div>IEIW</div> 
+              <div>FSSJ</div> 
             </div>
             <div class="line"></div>
             <div class="grid">
@@ -94,16 +94,16 @@
               <div class="pill"></div> 
               <div class="pill"></div> 
               <div class="pill"></div> 
-              <div>item1</div> 
-              <div>item2</div> 
-              <div>item3</div> 
-              <div>item4</div> 
-              <div>item5</div> 
-              <div>item1</div> 
-              <div>item2</div> 
-              <div>item3</div> 
-              <div>item4</div> 
-              <div>item5</div> 
+              <div>DKFJ</div> 
+              <div>IEDD</div> 
+              <div>OEIE</div> 
+              <div>CNGG</div> 
+              <div>EFEE</div> 
+              <div>BVBN</div> 
+              <div>DJAA</div> 
+              <div>IEIW</div> 
+              <div>ZDXD</div> 
+              <div>EIUW</div> 
             </div>
             <div class="line lighter"></div>
           </div>
@@ -128,7 +128,7 @@
               <div class="button-section-text-copy">
                 this is some text asl fa; alsk
               </div>
-              <div class="line lighter no-margin"></div>
+              <div class="line lighter no-margin" style="opacity: 0.1;"></div>
             </div>
             <div class="button-holder">
               <div class="button-shadow"></div>
