--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,9 +17,6 @@
 <svg id="Layer_3" class="hero-btn" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 43.01 49.02">
   <defs>
     <style>
-      .cls-1 {
-        fill: #ff9762;
-      }
 
       .cls-2 {
         fill: url(#radial-gradient-3);
@@ -51,7 +48,7 @@
     <ellipse class="cls-4" cx="21.65" cy="25.64" rx="19.29" ry="25.11" transform="translate(-10.76 16.95) rotate(-34.81)"/>
     <circle class="cls-3" cx="18.8" cy="18.8" r="18.8"/>
     <circle class="cls-2" cx="18.8" cy="18.8" r="16.54"/>
-    <path class="cls-1" d="m24.38,14.35c-6.08-2.63-8.09-4.78-11.19,0-3.14,4.84-5.84,6.05,0,8.95,5.84,2.9,8.27,4.47,11.19,0s6.08-6.32,0-8.95Zm-6.09,5.68c-1.14,0-2.07-.65-2.07-1.45s.93-1.45,2.07-1.45,2.07.65,2.07,1.45-.93,1.45-2.07,1.45Z"/>
+    <path fill="#ff9762" d="m24.38,14.35c-6.08-2.63-8.09-4.78-11.19,0-3.14,4.84-5.84,6.05,0,8.95,5.84,2.9,8.27,4.47,11.19,0s6.08-6.32,0-8.95Zm-6.09,5.68c-1.14,0-2.07-.65-2.07-1.45s.93-1.45,2.07-1.45,2.07.65,2.07,1.45-.93,1.45-2.07,1.45Z"/>
   </g>
 </svg>
           </div>
@@ -74,13 +71,13 @@
             <div class="label-text">umet</div>
           </div>
 
-          <div class="title">
+          <div class="title" data-lag="0.08">
             <div>cromg pamply</div>
             <div class="price">$2342</div>
           </div>
 
           <div class="grid-container">
-            <div class="grid bold">
+            <div class="grid bold" data-lag="0.01">
               <div>ASKD</div> 
               <div>FNSA</div> 
               <div>FJDS</div> 
@@ -88,7 +85,7 @@
               <div>FSSJ</div> 
             </div>
             <div class="line"></div>
-            <div class="grid">
+            <div class="grid" data-lag="0.03">
               <div class="pill"></div> 
               <div class="pill"></div> 
               <div class="pill"></div> 
@@ -139,14 +136,27 @@
           <nav data-lag="0.3">
 
             <a-nav-item>
-              <span slot="icon">icon</span>
+              <span slot="icon">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20.43 20.43" width="40px" height="40px">
+  <defs>
+    <style>
+      .cls-1 {
+        fill: none;
+        stroke: #53516c;
+        stroke-miterlimit: 10;
+      }
+    </style>
+  </defs>
+  <path class="cls-1" d="m9.43,10.22c17.39,9.17,9.96,16.6.79-.79-9.17,17.39-16.6,9.96.79.79C-6.39,1.05,1.05-6.39,10.22,11.01c9.17-17.39,16.6-9.96-.79-.79Z"/>
+</svg>
+              </span>
             </a-nav-item>
 
             <a-nav-item>
               <span slot="icon">
                 <img src="./assets/circle.svg" width="20px" height="20px"/>
               </span>
-              <span slot="label">label</span>
+              <span slot="label">dkfjs</span>
             </a-nav-item>
 
             <a-nav-item>
@@ -159,14 +169,14 @@
               <span slot="icon">
                 <img src="./assets/circle.svg" width="20px" height="20px"/>
               </span>
-              <span slot="label">label</span>
+              <span slot="label">asaoa</span>
             </a-nav-item>
 
             <a-nav-item>
               <span slot="icon">
                 <img src="./assets/curve.svg" width="20px" height="20px"/>
               </span>
-              <span slot="label">label</span>
+              <span slot="label">ajvnc</span>
             </a-nav-item>
 
           </nav>
