--- a/src/index.ejs
+++ b/src/index.ejs
@@ -71,7 +71,7 @@
             <div class="label-text">umet</div>
           </div>
 
-          <div class="title" data-lag="0.08">
+          <div class="title">
             <div>cromg pamply</div>
             <div class="price">$2342</div>
           </div>
