--- a/src/partials/metadata.html
+++ b/src/partials/metadata.html
@@ -16,7 +16,7 @@
 <meta property="og:url" content="https://www.alieninterfaces.com" />
 <meta property="og:title" content="Alien Interfaces - UI/UX" />
 <meta property="og:description" content="A collection of UI/UX made with AI/ML" />
-<meta property="og:image" content="https://www.cjgammon.com/static/twitter-card.png" />
+<meta property="og:image" content="https://alieninterfaces.com/static/twitter-card.png" />
 
 
 
