--- a/src/index.ejs
+++ b/src/index.ejs
@@ -13,7 +13,7 @@
         <div class="hero-content">
           <div class="hero-top" data-lag="0.3">
             <div class="hero-circle"></div>
-            <h1>dlkdfj adf asdj</h1>
+            <h1>travel hub</h1>
 <svg id="Layer_3" class="hero-btn" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 43.01 49.02">
   <defs>
     <style>
@@ -68,21 +68,21 @@
 
           <div class="label">
             <div class="label-icon"></div>
-            <div class="label-text">umet</div>
+            <div class="label-text">open</div>
           </div>
 
           <div class="title">
-            <div>cromg pamply</div>
-            <div class="price">$2342</div>
+            <div>Mountain Vista</div>
+            <div class="price">$2,342</div>
           </div>
 
           <div class="grid-container">
             <div class="grid bold" data-lag="0.01">
-              <div>ASKD</div> 
-              <div>FNSA</div> 
-              <div>FJDS</div> 
-              <div>IEIW</div> 
-              <div>FSSJ</div> 
+              <div>SKI</div> 
+              <div>SKI</div> 
+              <div>SKI</div> 
+              <div>BOARD</div> 
+              <div>BOARD</div> 
             </div>
             <div class="line"></div>
             <div class="grid" data-lag="0.03">
@@ -91,31 +91,31 @@
               <div class="pill"></div> 
               <div class="pill"></div> 
               <div class="pill"></div> 
-              <div>DKFJ</div> 
-              <div>IEDD</div> 
-              <div>OEIE</div> 
-              <div>CNGG</div> 
-              <div>EFEE</div> 
-              <div>BVBN</div> 
-              <div>DJAA</div> 
-              <div>IEIW</div> 
-              <div>ZDXD</div> 
-              <div>EIUW</div> 
+              <div>150cm</div> 
+              <div>155cm</div> 
+              <div>160cm</div> 
+              <div>150cm</div> 
+              <div>155cm</div> 
+              <div>$30</div> 
+              <div>$30</div> 
+              <div>$30</div> 
+              <div>$35</div> 
+              <div>$35</div> 
             </div>
             <div class="line lighter"></div>
           </div>
           
           <div class="img-grid">
             <img src="./assets/img.svg" width="80px" alt="img"/>
-            <div class="img-grid-header">dasdfjfjdfjoakj</div>
-            <div class="img-grid-price">aksdfjasd</div>
-            <div class="img-grid-subhead gray">asdfasdff</div>
-            <div class="img-grid-contenta gray">aasdfa</div>
-            <div class="img-grid-contentb gray center">basdfa</div>
-            <div class="img-grid-contentc gray right">cdalfskd</div>
-            <div class="img-grid-contentd gray">ddalsdkf</div>
-            <div class="img-grid-contente gray center">easldkfa</div>
-            <div class="img-grid-contentf gray right">fasdfa;j</div>
+            <div class="img-grid-header">Amenities</div>
+            <div class="img-grid-price">Available all year</div>
+            <div class="img-grid-subhead gray">Ski-in/ski-out access</div>
+            <div class="img-grid-contenta gray">On-site rental</div>
+            <div class="img-grid-contentb gray center">lessons for all ages</div>
+            <div class="img-grid-contentc gray right">Snowmaking</div>
+            <div class="img-grid-contentd gray">Ski patrol</div>
+            <div class="img-grid-contente gray center">On-mountain dining</div>
+            <div class="img-grid-contentf gray right">Outdoor pool</div>
           </div>
 
           <div class="line lighter"></div>
@@ -123,13 +123,13 @@
           <div class="button-section">
             <div class="button-section-text">
               <div class="button-section-text-copy">
-                this is some text asl fa; alsk
+                Available Now 
               </div>
               <div class="line lighter no-margin" style="opacity: 0.1;"></div>
             </div>
             <div class="button-holder">
               <div class="button-shadow"></div>
-              <button class="button">VERIFY</button>
+              <button class="button">PURCHASE</button>
             </div>
           </div>
 
@@ -156,7 +156,7 @@
               <span slot="icon">
                 <img src="./assets/circle.svg" width="20px" height="20px"/>
               </span>
-              <span slot="label">dkfjs</span>
+              <span slot="label">MORE</span>
             </a-nav-item>
 
             <a-nav-item>
@@ -169,14 +169,14 @@
               <span slot="icon">
                 <img src="./assets/circle.svg" width="20px" height="20px"/>
               </span>
-              <span slot="label">asaoa</span>
+              <span slot="label">LIST</span>
             </a-nav-item>
 
             <a-nav-item>
               <span slot="icon">
                 <img src="./assets/curve.svg" width="20px" height="20px"/>
               </span>
-              <span slot="label">ajvnc</span>
+              <span slot="label">SAVE</span>
             </a-nav-item>
 
           </nav>
