--- a/src/index.ejs
+++ b/src/index.ejs
@@ -62,6 +62,26 @@
         <path class="st0" d="M0,30.76c0,0,24.49-26.11,64.33-26.11c43.59,0,104.58,54.91,145.23,54.91s49.6-16.94,87.48-16.94
           s65.84,16.94,65.84,16.94v6.13H0V30.76z"/>
         </svg>
+
+        <svg version="1.1" id="wave2" class="hidden-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 362.89 65.69" style="enable-background:new 0 0 362.89 65.69;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#FFFFFF;}
+</style>
+<path class="st0" d="M0,40.76c0,0,24.49-26.11,64.33-26.11c43.59,0,93.58,14.91,134.23,14.91s60.6-16.94,98.48-16.94
+	s65.84,16.94,65.84,16.94v36.13H0V40.76z"/>
+</svg>
+
+<svg version="1.1" id="wave3" class="hidden-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 362.89 65.69" style="enable-background:new 0 0 362.89 65.69;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#FFFFFF;}
+</style>
+<path class="st0" d="M0,10.76c0,0,24.49,13.89,64.33,13.89c43.59,0,93.58-16.09,134.23-16.09s60.6,34.06,98.48,34.06
+	s65.84-13.06,65.84-13.06v36.13H0V10.76z"/>
+</svg>
+
+
       </section>
       <section class="content">
         <div class="content-inner">
@@ -109,13 +129,13 @@
             <img src="./assets/img.svg" width="80px" alt="img"/>
             <div class="img-grid-header">Amenities</div>
             <div class="img-grid-price">Available all year</div>
-            <div class="img-grid-subhead gray">Ski-in/ski-out access</div>
-            <div class="img-grid-contenta gray">On-site rental</div>
-            <div class="img-grid-contentb gray center">lessons for all ages</div>
+            <div class="img-grid-subhead gray">Ski-in/ski-out</div>
+            <div class="img-grid-contenta gray">rental</div>
+            <div class="img-grid-contentb gray center">lessons</div>
             <div class="img-grid-contentc gray right">Snowmaking</div>
             <div class="img-grid-contentd gray">Ski patrol</div>
-            <div class="img-grid-contente gray center">On-mountain dining</div>
-            <div class="img-grid-contentf gray right">Outdoor pool</div>
+            <div class="img-grid-contente gray center">dining</div>
+            <div class="img-grid-contentf gray right">pool</div>
           </div>
 
           <div class="line lighter"></div>
